[Task-29] Refactored project structure for pure services